TestCases/validate/CASAL-complex/report.spm
# The reports/outputs

@report initialisation-phase1
type initialisation
initialisation_phase Phase1

@report state-1975-1
type partition
time_step three
year 1975

@report state-1976-1
type partition
time_step three
year 1976

@report state-1977-1
type partition
time_step three
year 1977

@report state-1978-1
type partition
time_step three
year 1978

@report state-1979-1
type partition
time_step three
year 1979

@report state-1994-1
type partition
time_step three
year 1994

@report state-1995-1
type partition
time_step three
year 1995

@report state-1996-1
type partition
time_step three
year 1996

@report state-1997-1
type partition
time_step three
year 1997

@report state-1998-1
type partition
time_step three
year 1998

@report state-1999-1
type partition
time_step three
year 1999

@report state-2000-1
type partition
time_step three
year 2000

@report state-2001-1
type partition
time_step three
year 2001

@report state-2002-1
type partition
time_step three
year 2002

#@report SSB
#type derived_quantity
#derived_quantity SSB

@report estimate
type estimate_value
file_name MPD.dat

@report estimate-summary
type estimate_summary

@report objective
type objective_function

@report random_seed
type random_number_seed

@report MaturationMale
type selectivity
selectivity MaleMaturity

@report MaturationFemale
type selectivity
selectivity FemaleMaturity

@report chatFselMale
type selectivity
selectivity chatFselMale

@report chatFselFemale
type selectivity
selectivity chatFselFemale

@report chatTANselMale
type selectivity
selectivity chatTANselMale

@report chatTANselFemale
type selectivity
selectivity chatTANselFemale

#@report base_layer
#type layer
#layer base
#year 1994
#time_step One

#@report recruitment_layer
#type layer
#layer Recruitment
#year 1994
#time_step One

@report TAN2002
type observation
observation chatTANbiomass2002
